--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "sourceType": "module",
   "main": "src/app.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/app.js",
+    "start": "nodemon --exec node src/app.js",
     "lint": "eslint ."
   },
   "repository": {
