--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@babel/preset-env": "^7.22.20",
     "eslint": "^8.49.0",
     "eslint-plugin-node": "^11.1.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.7.1"
   },
   "engines": {
     "node": ">=8.0.0"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
